--- a/SALES_DATA_ANALYSIS.ipynb
+++ b/SALES_DATA_ANALYSIS.ipynb
@@ -3611,12 +3611,30 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## INFERENCE"
+      ],
+      "metadata": {
+        "id": "_07WqyfHHLcQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It is evident from the graph that the highest sales revenue is consistently generated in December, aligning with the fact that most orders are also placed during that month. From January to April, there is a gradual increase in sales revenue, followed by a gradual decline up to June. In July, there is a slight uptick, but sales revenue continues to decrease from July to September. Interestingly, there is a sudden and significant rise in sales revenue in October, although it experiences a slight dip in November, with the revenue being slightly lower than that in April. Notably, December stands out with a substantial number of orders and the highest revenue generation, as expected."
+      ],
+      "metadata": {
+        "id": "y0B6IKUDJRh8"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQoDg5bmY5bsd6Iwta1f3m",
+      "authorship_tag": "ABX9TyNoxxphQBIDbpuhaXw8jHIo",
       "include_colab_link": true
     },
     "kernelspec": {
