--- a/HR_ANALYTICS_.ipynb
+++ b/HR_ANALYTICS_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqdQGmdRx96pA39InZEDvG",
+      "authorship_tag": "ABX9TyMi5ZBimlnYtyCdh1AZlyZg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -450,15 +450,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "objectives\n",
-        "to determine the distribution of the workplace based on the gender\n",
+        "#objectives\n",
+        "To determine the distribution of the workplace based on the gender\n",
         "the jobsatisfaction according to the jobrole\n",
         "how the columns affect attrition (age, department, distancefromhome,education, gender, maritalstatus, performancerating,overtime, )\n",
         "businesstravel and how it it affects\n",
-        "how distancefromhome affects jobsatisfaction, performancerating, monthlyincome, overtime, trainingtimeslastyear,\n"
+        "how distancefromhome affects jobsatisfaction, performancerating, monthlyincome, overtime, trainingtimeslastyear, etc.\n"
       ],
       "metadata": {
         "id": "_c7TlFKk56uw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# a correlation graph between all numeric values"
+      ],
+      "metadata": {
+        "id": "6G2Gy42ziG4h"
       }
     },
     {
@@ -502,6 +511,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# A plot of Jobsatisfaction Vs OverTime"
+      ],
+      "metadata": {
+        "id": "ferbHGUmiMfo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -536,6 +554,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##MaritalStatus Vs Attrition"
+      ],
+      "metadata": {
+        "id": "x9EHqeD0i1qw"
+      }
     },
     {
       "cell_type": "code",
@@ -577,6 +604,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##A graph of Attition against TotalWorkingYears"
+      ],
+      "metadata": {
+        "id": "GwzTIu1jjDLW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -611,6 +647,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Marital Status Against JobSatisfacttion"
+      ],
+      "metadata": {
+        "id": "B1_7uhqNkM-8"
+      }
     },
     {
       "cell_type": "code",
@@ -651,9 +696,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "#A plot of JobRole Against Attrition"
+      ],
       "metadata": {
-        "id": "k6KqtS29NF_V"
+        "id": "eB8nbgYVkTgn"
       }
     },
     {
@@ -693,6 +740,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#A plot of Gender vs JobSatisfaction by Attrition"
+      ],
+      "metadata": {
+        "id": "byQgBu3RldMj"
+      }
     },
     {
       "cell_type": "code",
@@ -743,6 +799,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## A plot of EducationField Against Attrition"
+      ],
+      "metadata": {
+        "id": "Yf2Mw_sjn20F"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
@@ -779,6 +844,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#A plot Of Department vs JobSatisfaction (Grouped By Attrition)"
+      ],
+      "metadata": {
+        "id": "IclmbtCboW5z"
+      }
     },
     {
       "cell_type": "code",
@@ -862,7 +936,6 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "# Assuming you have a DataFrame named 'hr' with 'OverTime', 'DistanceFromHome', and 'JobSatisfaction' columns\n",
         "\n",
         "# Convert 'OverTime' to numerical values (for example, 'Yes' to 1, 'No' to 0)\n",
         "hr['OverTime'] = hr['OverTime'].map({'Yes': 1, 'No': 0})\n",
