--- a/HR_ANALYTICS_.ipynb
+++ b/HR_ANALYTICS_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDzdbKftykLrrZNXY3/3U5",
+      "authorship_tag": "ABX9TyMawhzL5xVTuQjbxO7LeODe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1222,9 +1222,120 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        " Correlation Map for Numeric Variables:\n",
+        "• There is a positive correlation between “JobLevel” and “MonthlyIncome,” which suggests\n",
+        "that as job level increases, monthly income tends to increase.\n",
+        "• “JobLevel” and “TotalWorkingYears” also show a positive correlation, indicating that\n",
+        "employees with more total working years tend to achieve higher job levels.\n",
+        "2. Attrition by Overtime:\n",
+        "• Employees who work overtime have a higher attrition rate compared to those who don’t.\n",
+        "• Overtime may be a factor contributing to attrition within the company.\n",
+        "3. Attrition by Marital Status:\n",
+        "• Single employees have a relatively higher attrition rate compared to married or divorced\n",
+        "employees.\n",
+        "• Marital status appears to have an influence on attrition rates, with single employees\n",
+        "more likely to leave.\n",
+        "4. Attrition by Job Role:\n",
+        "• Sales Representatives and Laboratory Technicians have higher attrition rates compared\n",
+        "to other job roles.\n",
+        "• The type of job role plays a significant role in attrition rates.\n",
+        "5. Attrition by Gender:\n",
+        "• Attrition rates between genders appear relatively balanced.\n",
+        "• Gender alone does not seem to be a strong predictor of attrition.\n",
+        "6. Attrition by Education Field:\n",
+        "• Employees with a background in “Human Resources” and “Technical Degree” fields have\n",
+        "20\n",
+        "higher attrition rates.\n",
+        "• Choice of education field may impact attrition rates.\n",
+        "7. Attrition by Department:\n",
+        "• The “Sales” department has a higher attrition rate compared to “Research & Develop￾ment” and “Human Resources.”\n",
+        "• The department an employee works in influences attrition.\n",
+        "8. Attrition by Business Travel:\n",
+        "• Employees who travel frequently have a higher attrition rate than those who travel rarely.\n",
+        "• Frequent business travel could be associated with higher attrition.\n",
+        "9. Relation between Overtime and Age:\n",
+        "• Employees working overtime tend to be slightly younger on average than those not working overtime.\n",
+        "10. Total Working Years:\n",
+        "• The distribution of total working years is right-skewed, with a concentration of employees\n",
+        "having fewer years of total work experience.\n",
+        "• A significant number of employees have less than 10 years of total working experience.\n",
+        "11. Education Level:\n",
+        "• Employees with “Bachelor’s” and “Master’s” degrees have a higher attrition rate compared to those with “College” or “Below College” education.\n",
+        "• Higher education levels do not necessarily correlate with lower attrition.\n",
+        "12. Number of Companies Worked:\n",
+        "• Employees who have worked for a larger number of companies tend to have a slightly\n",
+        "higher attrition rate.\n",
+        "• Job-hopping employees may be more likely to leave the company.\n",
+        "13. Distance from Home:\n",
+        "• The distribution of distance from home shows that most employees live relatively close\n",
+        "to the workplace.\n",
+        "• A smaller number of employees have a longer commute distance.\n",
+        "14.• Employees in the “Manager” and “Research Director” roles tend to have higher monthly\n",
+        "incomes compared to other job roles.\n",
+        "• “Laboratory Technician” and “Sales Representative” roles generally have lower monthly\n",
+        "incomes.\n",
+        "15.The distribution of education levels is similar for employees with and without attrition.\n",
+        "• Attrition rates do not show a strong correlation with education level.\n"
+      ],
       "metadata": {
         "id": "GCmE_5plcpk2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#RECOMMENDATIONS"
+      ],
+      "metadata": {
+        "id": "Jco-bCI5hO9r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "1. **Job Level and Monthly Income**: Consider implementing a structured career progression plan that aligns with job levels to motivate employees and ensure fair compensation increases as they advance in their careers.\n",
+        "\n",
+        "2. **Overtime and Attrition**: Explore the reasons behind overtime work and its impact on attrition. If possible, optimize workload distribution or provide additional support to employees who regularly work overtime to reduce attrition risk.\n",
+        "\n",
+        "3. **Marital Status and Attrition**: Develop initiatives or support programs specifically tailored to single employees to enhance their job satisfaction and commitment to the company.\n",
+        "\n",
+        "4. **Job Role and Attrition**: Investigate the reasons for higher attrition rates among Sales Representatives and Laboratory Technicians. Implement strategies to improve job satisfaction and retention in these roles.\n",
+        "\n",
+        "5. **Gender and Attrition**: Continue to maintain a balanced workplace in terms of gender. Focus on other factors that might contribute to attrition rather than gender.\n",
+        "\n",
+        "6. **Education Field and Attrition**: Monitor and address the specific challenges or concerns that employees with backgrounds in \"Human Resources\" and \"Technical Degree\" fields might face to reduce attrition.\n",
+        "\n",
+        "7. **Department and Attrition**: Investigate the underlying causes of higher attrition in the Sales department and implement measures to improve retention.\n",
+        "\n",
+        "8. **Business Travel and Attrition**: Evaluate the reasons behind frequent business travel and consider ways to mitigate its impact on employee attrition.\n",
+        "\n",
+        "9. **Overtime and Age**: Recognize that younger employees tend to work overtime more frequently. Ensure they receive proper support and work-life balance.\n",
+        "\n",
+        "10. **Total Working Years**: Provide career development opportunities for employees with fewer years of total work experience, considering their career aspirations.\n",
+        "\n",
+        "11. **Education Level and Attrition**: Recognize that higher education levels do not necessarily correlate with lower attrition. Focus on other factors affecting attrition for employees with Bachelor's and Master's degrees.\n",
+        "\n",
+        "12. **Number of Companies Worked**: Address concerns related to job-hopping employees to retain talent and maintain a stable workforce.\n",
+        "\n",
+        "13. **Distance from Home**: Consider offering flexible work arrangements or remote work options for employees with longer commute distances.\n",
+        "\n",
+        "14. **Job Roles and Monthly Income**: Ensure that salary structures are competitive, and employees are compensated fairly across all job roles.\n",
+        "\n",
+        "15. **Education Levels and Attrition**: Focus on factors other than education levels when addressing attrition, as it does not show a strong correlation.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0pt9fvvIhhly"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "64lJelzJh6Ap"
       }
     }
   ]
