--- a/BA_data_collection.ipynb
+++ b/BA_data_collection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJRAmhy5w+EIBFy+VimkD1",
+      "authorship_tag": "ABX9TyPyz2+Cg7DQ3uwLFfszc+Kb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -492,13 +492,6 @@
         "    \"stars\": stars,\n",
         "    \"date\": date,\n",
         "    \"country\": country,\n",
-        "    \"traveler_type\": traveler_type,\n",
-        "    \"seat_type\": seat_type,\n",
-        "    \"seat_comfort\": seat_comfort,\n",
-        "    \"cabin_staff_service\": cabin_staff_service,\n",
-        "    \"food_and_beverages\": food_and_beverages,\n",
-        "    \"inflight_environment\": inflight_environment,\n",
-        "    \"ground_service\": ground_service,\n",
         "\n",
         "})\n",
         "\n",
@@ -507,7 +500,7 @@
       "metadata": {
         "id": "lp2Gyoo_MtDZ"
       },
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -519,7 +512,7 @@
       "metadata": {
         "id": "Adymi4DgR3Qf"
       },
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -530,7 +523,7 @@
       "metadata": {
         "id": "KTDJi0GWaOxm"
       },
-      "execution_count": 38,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -541,12 +534,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 206
         },
         "id": "ICy-pYV8arfx",
-        "outputId": "ac14387b-10cc-4108-dd4c-3d0e63c505d2"
+        "outputId": "689b5927-20c6-49b7-865e-072cd492ac51"
       },
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,30 +552,16 @@
               "3           3  ✅ Trip Verified |   I hate British Airways! We...      1   \n",
               "4           4  ✅ Trip Verified |   Our BA flight from Porto t...      1   \n",
               "\n",
-              "                date         country      traveler_type  seat_type  \\\n",
-              "0  19th October 2023  United Kingdom  Type Of Traveller  Seat Type   \n",
-              "1  19th October 2023   United States  Type Of Traveller  Seat Type   \n",
-              "2  17th October 2023  United Kingdom  Type Of Traveller  Seat Type   \n",
-              "3  17th October 2023   United States  Type Of Traveller  Seat Type   \n",
-              "4  16th October 2023  United Kingdom  Type Of Traveller  Seat Type   \n",
-              "\n",
-              "   seat_comfort  cabin_staff_service food_and_beverages  \\\n",
-              "0  Seat Comfort  Cabin Staff Service   Food & Beverages   \n",
-              "1  Seat Comfort  Cabin Staff Service   Food & Beverages   \n",
-              "2  Seat Comfort  Cabin Staff Service   Food & Beverages   \n",
-              "3  Seat Comfort  Cabin Staff Service   Food & Beverages   \n",
-              "4  Seat Comfort  Cabin Staff Service   Food & Beverages   \n",
-              "\n",
-              "     inflight_environment  ground_service  \n",
-              "0  Inflight Entertainment  Ground Service  \n",
-              "1  Inflight Entertainment  Ground Service  \n",
-              "2  Inflight Entertainment  Ground Service  \n",
-              "3  Inflight Entertainment  Ground Service  \n",
-              "4  Inflight Entertainment  Ground Service  "
+              "                date         country  \n",
+              "0  19th October 2023  United Kingdom  \n",
+              "1  19th October 2023   United States  \n",
+              "2  17th October 2023  United Kingdom  \n",
+              "3  17th October 2023   United States  \n",
+              "4  16th October 2023  United Kingdom  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fdea8968-fef8-4fc9-a311-efbbb07e4691\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0250e293-4c95-44c0-9fa7-e83bc963eb64\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -606,13 +585,6 @@
               "      <th>stars</th>\n",
               "      <th>date</th>\n",
               "      <th>country</th>\n",
-              "      <th>traveler_type</th>\n",
-              "      <th>seat_type</th>\n",
-              "      <th>seat_comfort</th>\n",
-              "      <th>cabin_staff_service</th>\n",
-              "      <th>food_and_beverages</th>\n",
-              "      <th>inflight_environment</th>\n",
-              "      <th>ground_service</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -623,13 +595,6 @@
               "      <td>5</td>\n",
               "      <td>19th October 2023</td>\n",
               "      <td>United Kingdom</td>\n",
-              "      <td>Type Of Traveller</td>\n",
-              "      <td>Seat Type</td>\n",
-              "      <td>Seat Comfort</td>\n",
-              "      <td>Cabin Staff Service</td>\n",
-              "      <td>Food &amp; Beverages</td>\n",
-              "      <td>Inflight Entertainment</td>\n",
-              "      <td>Ground Service</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -638,13 +603,6 @@
               "      <td>1</td>\n",
               "      <td>19th October 2023</td>\n",
               "      <td>United States</td>\n",
-              "      <td>Type Of Traveller</td>\n",
-              "      <td>Seat Type</td>\n",
-              "      <td>Seat Comfort</td>\n",
-              "      <td>Cabin Staff Service</td>\n",
-              "      <td>Food &amp; Beverages</td>\n",
-              "      <td>Inflight Entertainment</td>\n",
-              "      <td>Ground Service</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -653,13 +611,6 @@
               "      <td>1</td>\n",
               "      <td>17th October 2023</td>\n",
               "      <td>United Kingdom</td>\n",
-              "      <td>Type Of Traveller</td>\n",
-              "      <td>Seat Type</td>\n",
-              "      <td>Seat Comfort</td>\n",
-              "      <td>Cabin Staff Service</td>\n",
-              "      <td>Food &amp; Beverages</td>\n",
-              "      <td>Inflight Entertainment</td>\n",
-              "      <td>Ground Service</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -668,13 +619,6 @@
               "      <td>1</td>\n",
               "      <td>17th October 2023</td>\n",
               "      <td>United States</td>\n",
-              "      <td>Type Of Traveller</td>\n",
-              "      <td>Seat Type</td>\n",
-              "      <td>Seat Comfort</td>\n",
-              "      <td>Cabin Staff Service</td>\n",
-              "      <td>Food &amp; Beverages</td>\n",
-              "      <td>Inflight Entertainment</td>\n",
-              "      <td>Ground Service</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -683,13 +627,6 @@
               "      <td>1</td>\n",
               "      <td>16th October 2023</td>\n",
               "      <td>United Kingdom</td>\n",
-              "      <td>Type Of Traveller</td>\n",
-              "      <td>Seat Type</td>\n",
-              "      <td>Seat Comfort</td>\n",
-              "      <td>Cabin Staff Service</td>\n",
-              "      <td>Food &amp; Beverages</td>\n",
-              "      <td>Inflight Entertainment</td>\n",
-              "      <td>Ground Service</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -697,7 +634,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fdea8968-fef8-4fc9-a311-efbbb07e4691')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0250e293-4c95-44c0-9fa7-e83bc963eb64')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -749,12 +686,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fdea8968-fef8-4fc9-a311-efbbb07e4691 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0250e293-4c95-44c0-9fa7-e83bc963eb64 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fdea8968-fef8-4fc9-a311-efbbb07e4691');\n",
+              "        const element = document.querySelector('#df-0250e293-4c95-44c0-9fa7-e83bc963eb64');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -774,8 +711,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5f25f394-c1d2-4ee3-bdd6-d625b4979b1e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5f25f394-c1d2-4ee3-bdd6-d625b4979b1e')\"\n",
+              "<div id=\"df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -894,7 +831,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5f25f394-c1d2-4ee3-bdd6-d625b4979b1e button');\n",
+              "        document.querySelector('#df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -905,7 +842,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 43
         }
       ]
     }
