--- a/BA_data_collection.ipynb
+++ b/BA_data_collection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyz2+Cg7DQ3uwLFfszc+Kb",
+      "authorship_tag": "ABX9TyNvOYOlkbXVPTISW40sn6C1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,12 +518,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df= pd.read_csv(\"BA_reviews.csv\")"
+        "df= pd.read_csv(\"BA_reviews.csv\",index_col=0)"
       ],
       "metadata": {
         "id": "KTDJi0GWaOxm"
       },
-      "execution_count": 42,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -537,20 +537,20 @@
           "height": 206
         },
         "id": "ICy-pYV8arfx",
-        "outputId": "689b5927-20c6-49b7-865e-072cd492ac51"
+        "outputId": "62c35c24-cb50-421e-e5b9-14cb2178d87e"
       },
-      "execution_count": 43,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   Unnamed: 0                                            reviews  stars  \\\n",
-              "0           0  ✅ Trip Verified |   I flew from Istanbul to Lo...      5   \n",
-              "1           1  Not Verified |  I have flow on BA several time...      1   \n",
-              "2           2  ✅ Trip Verified |   The flight departed over a...      1   \n",
-              "3           3  ✅ Trip Verified |   I hate British Airways! We...      1   \n",
-              "4           4  ✅ Trip Verified |   Our BA flight from Porto t...      1   \n",
+              "                                             reviews  stars  \\\n",
+              "0  ✅ Trip Verified |   I flew from Istanbul to Lo...      5   \n",
+              "1  Not Verified |  I have flow on BA several time...      1   \n",
+              "2  ✅ Trip Verified |   The flight departed over a...      1   \n",
+              "3  ✅ Trip Verified |   I hate British Airways! We...      1   \n",
+              "4  ✅ Trip Verified |   Our BA flight from Porto t...      1   \n",
               "\n",
               "                date         country  \n",
               "0  19th October 2023  United Kingdom  \n",
@@ -561,7 +561,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0250e293-4c95-44c0-9fa7-e83bc963eb64\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6a6e7c0e-c559-4c8d-bfc9-76de019e0fe2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -580,7 +580,6 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Unnamed: 0</th>\n",
               "      <th>reviews</th>\n",
               "      <th>stars</th>\n",
               "      <th>date</th>\n",
@@ -590,7 +589,6 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0</td>\n",
               "      <td>✅ Trip Verified |   I flew from Istanbul to Lo...</td>\n",
               "      <td>5</td>\n",
               "      <td>19th October 2023</td>\n",
@@ -598,7 +596,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>1</td>\n",
               "      <td>Not Verified |  I have flow on BA several time...</td>\n",
               "      <td>1</td>\n",
               "      <td>19th October 2023</td>\n",
@@ -606,7 +603,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2</td>\n",
               "      <td>✅ Trip Verified |   The flight departed over a...</td>\n",
               "      <td>1</td>\n",
               "      <td>17th October 2023</td>\n",
@@ -614,7 +610,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>3</td>\n",
               "      <td>✅ Trip Verified |   I hate British Airways! We...</td>\n",
               "      <td>1</td>\n",
               "      <td>17th October 2023</td>\n",
@@ -622,7 +617,6 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>4</td>\n",
               "      <td>✅ Trip Verified |   Our BA flight from Porto t...</td>\n",
               "      <td>1</td>\n",
               "      <td>16th October 2023</td>\n",
@@ -634,7 +628,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0250e293-4c95-44c0-9fa7-e83bc963eb64')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a6e7c0e-c559-4c8d-bfc9-76de019e0fe2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -686,12 +680,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0250e293-4c95-44c0-9fa7-e83bc963eb64 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6a6e7c0e-c559-4c8d-bfc9-76de019e0fe2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0250e293-4c95-44c0-9fa7-e83bc963eb64');\n",
+              "        const element = document.querySelector('#df-6a6e7c0e-c559-4c8d-bfc9-76de019e0fe2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -711,8 +705,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe')\"\n",
+              "<div id=\"df-ce4208d8-6f39-489a-af27-07791836d217\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ce4208d8-6f39-489a-af27-07791836d217')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -831,7 +825,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-20b8d4ab-f775-4e99-89c2-fbe5e8bc1efe button');\n",
+              "        document.querySelector('#df-ce4208d8-6f39-489a-af27-07791836d217 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -842,7 +836,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 45
         }
       ]
     }
