--- a/weather.ipynb
+++ b/weather.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## IMPORTING LIBRARIES"
+      ],
+      "metadata": {
+        "id": "mfjSq_Wk4efQ"
+      },
+      "id": "mfjSq_Wk4efQ"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "9de3fa29-5e89-45c4-a256-5c015c28ca7b",
@@ -26,6 +36,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## READING THE DATASET"
+      ],
+      "metadata": {
+        "id": "N1yFTBma4jPp"
+      },
+      "id": "N1yFTBma4jPp"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "1d1ae6bc-f4b8-481d-8fb7-8a7bb97f3d9e",
@@ -36,6 +56,16 @@
       "source": [
         "df = pd.read_csv(\"weather.csv\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#PREVIEWING THE FIRST 5 ROWS"
+      ],
+      "metadata": {
+        "id": "9ceuA-Sc4nF6"
+      },
+      "id": "9ceuA-Sc4nF6"
     },
     {
       "cell_type": "code",
@@ -163,6 +193,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## CHECKING FOR ERRORS"
+      ],
+      "metadata": {
+        "id": "LReVWyRm4sIX"
+      },
+      "id": "LReVWyRm4sIX"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "07cc9787-71a2-4988-83e3-a024e675a751",
@@ -193,6 +233,16 @@
       "source": [
         "df.isnull().sum()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#GENERAL INFO AND STATS OF THE DATASET"
+      ],
+      "metadata": {
+        "id": "IScDsir84wuc"
+      },
+      "id": "IScDsir84wuc"
     },
     {
       "cell_type": "code",
@@ -376,6 +426,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## CHECKING THE NUMBER OF ENTERIES"
+      ],
+      "metadata": {
+        "id": "AHfrXTS647sk"
+      },
+      "id": "AHfrXTS647sk"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "f21378c3-08e5-498a-b6fc-234d02e540cd",
@@ -398,6 +458,16 @@
       "source": [
         "df.shape"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## COLUMN NAMES"
+      ],
+      "metadata": {
+        "id": "e0u4KiRH5AmR"
+      },
+      "id": "e0u4KiRH5AmR"
     },
     {
       "cell_type": "code",
@@ -424,6 +494,16 @@
       "source": [
         "df.columns"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## CHECKING FOR DUPLICATES"
+      ],
+      "metadata": {
+        "id": "NdlZbk9M5CwT"
+      },
+      "id": "NdlZbk9M5CwT"
     },
     {
       "cell_type": "code",
@@ -453,6 +533,26 @@
         "else:\n",
         "    print(\"No duplicate rows found.\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#ANALYSES"
+      ],
+      "metadata": {
+        "id": "-kTAi4zu5HO5"
+      },
+      "id": "-kTAi4zu5HO5"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## TEMPERATURE ANALYSIS"
+      ],
+      "metadata": {
+        "id": "RVkm7qvx5J1C"
+      },
+      "id": "RVkm7qvx5J1C"
     },
     {
       "cell_type": "code",
@@ -494,6 +594,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It appears that the initial three months of 2012 experienced notably cold temperatures, followed by a gradual and consistent rise in temperature from March to September. Notably, September stands out as a month with the highest increase in temperature. As the year progresses into the last three months, a return to colder temperatures is observed."
+      ],
+      "metadata": {
+        "id": "MVElKrr35USr"
+      },
+      "id": "MVElKrr35USr"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## CALCULATING THE AVERAGE TEMPERATURE OF EACH QUARTER"
+      ],
+      "metadata": {
+        "id": "xx9Xgw1U5fYW"
+      },
+      "id": "xx9Xgw1U5fYW"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "56462ced-658f-44db-a0d5-46a0a6a98e42",
@@ -517,7 +637,7 @@
         }
       ],
       "source": [
-        "# Assuming 'Date/Time' column is in datetime format\n",
+        "\n",
         "df['Date/Time'] = pd.to_datetime(df['Date/Time'])\n",
         "\n",
         "df.set_index('Date/Time', inplace=True)\n",
@@ -579,8 +699,50 @@
         "id": "227b8b0f-80a7-4e0f-a6d0-913b4ca1895d"
       },
       "source": [
-        "It appears that the initial three months of 2012 experienced notably cold temperatures, followed by a gradual and consistent rise in temperature from March to September. Notably, September stands out as a month with the highest increase in temperature. As the year progresses into the last three months, a return to colder temperatures is observed."
+        "\n",
+        "\n",
+        "The first quarter is notably cold, recording the lowest temperatures of the year. The average temperature of -2.794322 underscores the harsh cold weather during this period.\n",
+        "\n",
+        "The second quarter sees a temperature increase, indicating favorable weather conditions with an average temperature of 14.479899.\n",
+        "\n",
+        "The third quarter experiences a further rise in temperature, averaging 20.561775. The highest temperature of the year is also recorded during this period, emphasizing predominantly clear weather conditions.\n",
+        "\n",
+        "However, in the last quarter, there is a rapid temperature decrease. The highest temperature in this quarter is around 18 degrees Celsius, with an average temperature of 2.880978."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## RECCOMMENDATIONS BASED ON TEMPORAL ANALYSES\n",
+        "\n",
+        "\n",
+        "\n",
+        "### First Quarter:\n",
+        "- **Flight Schedules:** Airlines operating in this quarter may need to be prepared for challenging weather conditions, including potential cold temperatures and adverse weather events. Flight delays or cancellations due to snow or icy conditions could be a consideration.\n",
+        "  \n",
+        "- **Dress Code:** Residents should dress warmly, with layers to protect against the cold. Airlines may advise passengers to carry extra layers or blankets, especially for early morning or late-night flights.\n",
+        "\n",
+        "### Second Quarter:\n",
+        "- **Flight Schedules:** Generally, this quarter suggests more favorable weather conditions. Airlines may experience fewer disruptions due to weather, leading to more reliable flight schedules.\n",
+        "  \n",
+        "- **Dress Code:** Passengers can expect milder temperatures. While still comfortable, it's advisable to dress in layers as temperatures can vary, especially during early morning or evening flights.\n",
+        "\n",
+        "### Third Quarter:\n",
+        "- **Flight Schedules:** This quarter likely offers excellent flying conditions with clear weather. Airlines may experience minimal weather-related disruptions, contributing to reliable flight schedules.\n",
+        "  \n",
+        "- **Dress Code:** Residents can enjoy warmer temperatures. Light and breathable clothing would be suitable, but it's advisable to have a light jacket or sweater for cooler evenings.\n",
+        "\n",
+        "### Fourth Quarter:\n",
+        "- **Flight Schedules:** Airlines should be prepared for potential disruptions due to decreasing temperatures, especially in the latter part of the quarter. Flight delays or cancellations due to winter weather conditions may occur.\n",
+        "  \n",
+        "- **Dress Code:** Passengers should dress warmly, with heavier clothing to combat colder temperatures. Airlines may recommend or provide blankets for added comfort during flights.\n",
+        "\n",
+        "Adjustments to flight schedules and dress code should be made based on more specific local weather forecasts, but these general considerations can provide a starting point for planning in each quarter."
+      ],
+      "metadata": {
+        "id": "T4CBTXih-XAm"
+      },
+      "id": "T4CBTXih-XAm"
     },
     {
       "cell_type": "markdown",
