--- a/weather.ipynb
+++ b/weather.ipynb
@@ -1709,6 +1709,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## DISTRIBUTION OF WEATHER CONDITIONS"
+      ],
+      "metadata": {
+        "id": "pXGrui3A9ypM"
+      },
+      "id": "pXGrui3A9ypM"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "b7b36e25-f8a8-4c92-a943-7df118710f67",
